--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   geolocator: ^5.3.1
   google_sign_in: ^4.4.0
   image: ^2.1.12
-  image_picker: ^0.6.4
+  image_picker: ^0.6.7+2
 
 
 
