--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: social_network
 description: A new Flutter project.
 
-
 version: 1.0.0+1
 
 environment:
@@ -11,32 +10,24 @@ dependencies:
   flutter:
     sdk: flutter
 
-  
   cupertino_icons: ^0.1.2
-  firebase_storage: ^3.1.5
-  cloud_firestore: ^0.13.4+2
-  firebase_core: ^0.4.4+3
-  firebase_auth: ^0.15.5+3
-  firebase_messaging: ^6.0.13
-  flutter_svg: ^0.17.3+1
+  firebase_storage: ^4.0.0
+  cloud_firestore: ^0.14.0+2
+  firebase_core: ^0.5.0
+  firebase_auth: ^0.18.0+1
+  firebase_messaging: ^7.0.0
+  flutter_svg: ^0.18.1
   timeago: ^2.0.26
-  cached_network_image: ^2.0.0
-  path_provider: ^1.6.5
-  animator: ^1.0.0+5
-  uuid: ^2.0.4
-  geolocator: ^5.3.1
-  google_sign_in: ^4.4.0
-  image: ^2.1.12
-  image_picker: ^0.6.7+2
+  cached_network_image: ^2.3.1
+  path_provider: ^1.6.14
+  animator: ^2.0.1
+  uuid: ^2.2.2
+  geolocator: ^6.0.0+1
+  google_sign_in: ^4.5.3
+  image: ^2.1.14
+  image_picker: ^0.6.7+7
 
-
-
-
-
-dev_dependencies:
-  
-
-
+dev_dependencies: null
 
 flutter:
 
@@ -52,10 +43,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -75,3 +64,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
